--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="success_color">#3DB49E</color>
     <color name="LightRed">#ED6565</color>
     <color name="CoolGray1">#DAD7D7</color>
+    <color name="Gray2">#DBDBDB</color>
 </resources>
