--- a/app/src/main/res/layout/view_list.xml
+++ b/app/src/main/res/layout/view_list.xml
@@ -34,15 +34,16 @@
                  app:cardElevation="3dp">
 
                  <androidx.constraintlayout.widget.ConstraintLayout
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content">
+                     android:layout_width="match_parent"
+                     android:layout_height="match_parent">
 
                      <ProgressBar
                          android:id="@+id/progressBar"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
-                         app:layout_constraintBottom_toBottomOf="@+id/image"
-                         app:layout_constraintEnd_toEndOf="@+id/image"
+                         android:foregroundGravity="center"
+                         app:layout_constraintBottom_toBottomOf="parent"
+                         app:layout_constraintEnd_toEndOf="parent"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintTop_toTopOf="parent" />
 
